--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "browserslist": [
     "defaults"
   ],
+  "browser": {
+    "fs": false
+  },
   "scripts": {
     "watch": "webpack --watch --mode=development",
     "build": "webpack --mode=production"
@@ -34,4 +37,5 @@
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
   }
+
 }
